[package]
name = "leetrust"
version = "0.1.0"
edition = "2021"
description = "Learn rust by solving leetcode problems!"
repository = "https://github.com/acurry/leetrust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
